Prepare for use with bugsnag-js
This is now a fork of ericelliot/cuid so that we can use this module
in bugsnag-js, which requires IE8 support. This commit:

- removes the use of Object.keys() (the only thing making it incompatible
  with IE8
- removes the slug() function – we don't need it so it saves us bytes
- removes related tests, and fixes a typo in the test
- removes typescript definition – it's not referenced from anywhere and
  has no QA/tests
- resets the version
- becomes a scoped module, ready for publishing to npm @bugsnag/cuid

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cuid",
-  "version": "2.1.0",
+  "name": "@bugsnag/cuid",
+  "version": "0.0.0",
   "description": "Collision-resistant ids optimized for horizontal scaling and performance. For node and browsers.",
   "author": {
-    "name": "Eric Elliott",
-    "url": "https://ericelliottjs.com"
+    "name": "Bugsnag",
+    "url": "https://bugsnag.com"
   },
   "main": "index.js",
   "browser": {
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ericelliott/cuid.git"
+    "url": "https://github.com/bugsnag/cuid.git"
   },
   "license": "MIT",
   "devDependencies": {
