--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "type": "git",
     "url": "https://github.com/bugsnag/cuid.git"
   },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "license": "MIT",
   "devDependencies": {
     "browserify": "14.4.0",
