--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "react-native": {
     "./lib/fingerprint.js": "./lib/fingerprint.react-native.js"
   },
+  "types": "./types/index.d.ts",
   "keywords": [
     "id",
     "guid",
@@ -26,6 +27,7 @@
   },
   "files": [
     "lib",
+    "types",
     "index.js"
   ],
   "license": "MIT",
@@ -38,6 +40,7 @@
     "karma-tap": "^3.1.1",
     "mkdirp": "^0.5.1",
     "tape": "^4.6.2",
+    "typescript": "^5.1.6",
     "uglify-js": "^2.7.4",
     "watchify": "3.9.0",
     "webworkify": "^1.4.0"
