--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "14.4.0",
-    "eslint": "^3.9.1",
+    "eslint": "^8.56.0",
     "jasmine": "^2.5.0",
     "jasmine-core": "^2.8.0",
-    "karma": "^1.7.0",
-    "karma-browserify": "^5.1.1",
+    "karma": "^6.4.2",
+    "karma-browserify": "^8.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.1",
     "mkdirp": "^0.5.1",
     "uglify-js": "^2.7.4",
-    "watchify": "3.9.0",
+    "watchify": "^4.0.0",
     "webworkify": "^1.4.0"
   },
   "scripts": {
