--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        node: [6, 8, 10, 12, 14]
+        node: [18, 20, 22]
     steps:
       - uses: actions/setup-node@v2
         with:
