--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -6,8 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
-        node: [6, 8, 10, 12, 14]
+        node: [6, 8, 10, 12, 14, 16, 18, 20, 22]
     steps:
       - uses: actions/setup-node@v2
         with:
