--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [6, 8, 10, 12, 14, 16, 18, 20, 22]
+        node: [12, 14, 16, 18, 20, 22]
     steps:
       - uses: actions/setup-node@v2
         with:
