--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
     "name": "Bugsnag",
     "url": "https://bugsnag.com"
   },
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "types": "cuid.d.ts",
   "exports": {
     ".": {
       "import": "./index.esm.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.mjs"
     },
     "./lib/fingerprint": {
       "browser": "./lib/fingerprint.browser.mjs",
       "node": "./lib/fingerprint.mjs",
-      "default": "./dist/lib/fingerprint.js"
+      "default": "./dist/lib/fingerprint.mjs"
     }
   },
   "imports": {
     "#fingerprint": {
       "browser": "./lib/fingerprint.browser.mjs",
       "node": "./lib/fingerprint.mjs",
-      "default": "./lib/fingerprint.react-native.js"
+      "default": "./lib/fingerprint.react-native.mjs"
     }
   },
   "browser": {
-    "./dist/lib/fingerprint.js": "./dist/lib/fingerprint.browser.js"
+    "./dist/lib/fingerprint.mjs": "./dist/lib/fingerprint.browser.mjs"
   },
   "react-native": {
-    "./dist/lib/fingerprint.js": "./dist/lib/fingerprint.react-native.js"
+    "./dist/lib/fingerprint.mjs": "./dist/lib/fingerprint.react-native.mjs"
   },
   "keywords": [
     "id",
@@ -60,7 +60,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.1",
     "mkdirp": "^0.5.1",
-    "rollup": "^3.19.1",
+    "rollup": "^2.76.0",
     "watchify": "^4.0.0",
     "webworkify": "^1.4.0"
   },
